[gd_scene load_steps=9 format=3 uid="uid://ddt3y2gcsslnd"]

[ext_resource type="Script" uid="uid://bghuptbgk8wbb" path="res://scripts/dist_options.gd" id="1_3nhhm"]
[ext_resource type="Script" uid="uid://ckgw2v8xenr0c" path="res://scripts/generation_options.gd" id="1_5hor1"]
[ext_resource type="Script" uid="uid://br5ituxfuefnp" path="res://scripts/position_manager.gd" id="1_83eeh"]
[ext_resource type="Script" uid="uid://26dphkgxkor" path="res://scripts/state_manager.gd" id="3_mpv8h"]
[ext_resource type="Script" uid="uid://rejciowe8h0t" path="res://scripts/generate_button.gd" id="4_q4a4c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgmrb"]
bg_color = Color(0.17143, 0.410496, 0.68628, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5hor1"]
bg_color = Color(0.172549, 0.411765, 0.686275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpv8h"]
bg_color = Color(0.17143, 0.410496, 0.68628, 1)
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="VisualEditor" type="Node2D"]

[node name="PositionManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_83eeh")

[node name="StateManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_mpv8h")

[node name="GenerationPanel" type="CanvasLayer" parent="."]

[node name="GenerationPhase" type="Panel" parent="GenerationPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 864.0
offset_top = -756.0
offset_right = 1376.0
offset_bottom = -603.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fgmrb")

[node name="VBoxContainer" type="VBoxContainer" parent="GenerationPanel/GenerationPhase"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 464.0
offset_bottom = 136.0
mouse_filter = 2

[node name="Generation Phase" type="Label" parent="GenerationPanel/GenerationPhase/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 40
text = "Generation Phase:"

[node name="GenOptions" type="OptionButton" parent="GenerationPanel/GenerationPhase/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 2
popup/item_0/text = "Seeding"
popup/item_0/id = 0
popup/item_1/text = "Other"
popup/item_1/id = 1
script = ExtResource("1_5hor1")

[node name="SeedingSegment" type="CanvasLayer" parent="GenerationPanel"]
unique_name_in_owner = true

[node name="DistributionType" type="Panel" parent="GenerationPanel/SeedingSegment"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 864.0
offset_top = -604.0
offset_right = 1376.0
offset_bottom = -451.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5hor1")

[node name="VBoxContainer" type="VBoxContainer" parent="GenerationPanel/SeedingSegment/DistributionType"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 464.0
offset_bottom = 136.0
mouse_filter = 2

[node name="DistributionTypes" type="Label" parent="GenerationPanel/SeedingSegment/DistributionType/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
mouse_filter = 0
theme_override_font_sizes/font_size = 40
text = "Distribution Type:"

[node name="DistTypes" type="OptionButton" parent="GenerationPanel/SeedingSegment/DistributionType/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
selected = 0
item_count = 5
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Fibonacci"
popup/item_1/id = 1
popup/item_2/text = "Poisson Disk"
popup/item_2/id = 2
popup/item_3/text = "Halton Sequence"
popup/item_3/id = 3
popup/item_4/text = "Circular"
popup/item_4/id = 4
script = ExtResource("1_3nhhm")

[node name="RandomDist" type="CanvasLayer" parent="GenerationPanel/SeedingSegment"]
unique_name_in_owner = true

[node name="Parameters" type="Panel" parent="GenerationPanel/SeedingSegment/RandomDist"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 864.0
offset_top = -452.0
offset_right = 1376.0
offset_bottom = -292.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mpv8h")

[node name="Labels" type="VBoxContainer" parent="GenerationPanel/SeedingSegment/RandomDist/Parameters"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 308.0
offset_bottom = 136.0
mouse_filter = 0

[node name="NumPoints" type="Label" parent="GenerationPanel/SeedingSegment/RandomDist/Parameters/Labels"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 0
theme_override_font_sizes/font_size = 40
text = "Num Points:  "

[node name="SeedNum" type="Label" parent="GenerationPanel/SeedingSegment/RandomDist/Parameters/Labels"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 0
theme_override_font_sizes/font_size = 40
text = "Seed No:         "

[node name="Values" type="VBoxContainer" parent="GenerationPanel/SeedingSegment/RandomDist/Parameters"]
layout_mode = 0
offset_left = 312.0
offset_top = 16.0
offset_right = 464.0
offset_bottom = 134.0
mouse_filter = 0

[node name="NumPoints" type="LineEdit" parent="GenerationPanel/SeedingSegment/RandomDist/Parameters/Values"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 35
text = "100"
max_length = 10

[node name="SeedNum" type="LineEdit" parent="GenerationPanel/SeedingSegment/RandomDist/Parameters/Values"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 35
text = "0"
max_length = 10

[node name="GenerateButton" type="Button" parent="GenerationPanel"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 904.0
offset_top = -276.0
offset_right = 1328.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Generate!"
script = ExtResource("4_q4a4c")

[connection signal="item_selected" from="GenerationPanel/GenerationPhase/VBoxContainer/GenOptions" to="GenerationPanel/GenerationPhase/VBoxContainer/GenOptions" method="_on_item_selected"]
[connection signal="item_selected" from="GenerationPanel/SeedingSegment/DistributionType/VBoxContainer/DistTypes" to="GenerationPanel/SeedingSegment/DistributionType/VBoxContainer/DistTypes" method="_on_item_selected"]
[connection signal="text_changed" from="GenerationPanel/SeedingSegment/RandomDist/Parameters/Values/NumPoints" to="." method="_on_seed_value_changed"]
[connection signal="text_changed" from="GenerationPanel/SeedingSegment/RandomDist/Parameters/Values/SeedNum" to="." method="_on_seed_value_changed"]
